Fixed sonar issue and updated todo.txt

--- a/source/todo.txt
+++ b/source/todo.txt
@@ -2,5 +2,5 @@
 2. Items to be stared
 3. List to be duplicated
 4. Notes to be Added and Edited on item
-5. Comments per item - Add and Delete
+5. Comments per item - Add and Delete (Add - DONE)
 6. Reminders per item
